fix(toolbar): add contrast when button are selected and hovered

--- a/frontend/src/styles/wv-toolbar.scss
+++ b/frontend/src/styles/wv-toolbar.scss
@@ -7,68 +7,72 @@
 }
 
 .wv-toolbar { // add a level of specificity to ensure there is no conflict with bootstrap related classes in lify
-.wv-toolbar-icon-rotate-right {
-	transform: rotate(90deg);
-}
+	.wv-toolbar-icon-rotate-right {
+		transform: rotate(90deg);
+	}
 
-.wv-toolbar-item {
-	background-color: black; 
-	background-image: none; 
-	text-shadow: none; 
-	color: #EEE; 
-	border: none; 
-	border-bottom: 1px solid white; 
-	border-radius: 0; 
-	height: 4rem;
-	line-height: 3rem;
-	margin-right: 1px;
-	margin-left: 1px;
-	min-width: 3.1em;
+	.wv-toolbar-item {
+		background-color: black; 
+		background-image: none; 
+		text-shadow: none; 
+		color: #EEE; 
+		border: none; 
+		border-bottom: 1px solid white; 
+		border-radius: 0; 
+		height: 4rem;
+		line-height: 3rem;
+		margin-right: 1px;
+		margin-left: 1px;
+		min-width: 3.1em;
+		
+		&:active {
+			background-color: black;
+			color: black;
+		}
+		&.active {
+			background-color: hsla(0, 100%, 100%, 0.9);
+			box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+			border-bottom: 1px solid white;
+		    color: black;
+		}
+		&:hover, &.active:hover {
+			background-color: hsla(0, 100%, 100%, 0.95);
+			border-bottom: 1px solid white;
+			color: black;
+		}
+
+		position: relative;
+
+		&::after {
+			position: absolute;
+			content: '';
+			bottom: 0px;
+			left: 0px;
+			right: 0px;
+			height: 1px;
+			background-color: black;
+		}
+	}
 	
-	&:active {
-		background-color: black;
+	.wv-toolbar-settings {
+		padding-left: 1px;
 	}
-	&.active {
-		background-color: hsla(0, 100%, 100%, 0.9);
-		box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-		border-bottom: 1px solid white; 
+	.wv-toolbar-settings,
+	.wv-toolbar-states,
+	.wv-toolbar-tools,
+	.wv-toolbar-end {
+		// display: inline-block;
+		margin-left: 2px;
+
+	    z-index: 1; // show tools on top of the viewports in small screen size
 	}
-	&:hover, &.active:hover {
-		background-color: hsla(0, 100%, 100%, 0.95);
-		border-bottom: 1px solid white; 
+
+	.wv-toolbar-end {
+		flex-grow: 10;
+		border-bottom: 1px solid white;
 	}
 
-	position: relative;
-
-	&::after {
-		position: absolute;
-		content: '';
-		bottom: 0px;
-		left: 0px;
-		right: 0px;
-		height: 1px;
-		background-color: black;
+	.wv-toolbar-item .fa {
+		line-height: 3rem;
 	}
-}
-.fa.wv-toolbar-item {
-	line-height: 3rem;
-}
-
-.wv-toolbar-settings {
-	padding-left: 1px;
-}
-.wv-toolbar-settings,
-.wv-toolbar-states,
-.wv-toolbar-tools,
-.wv-toolbar-end {
-	// display: inline-block;
-	margin-left: 2px;
-
-    z-index: 1; // show tools on top of the viewports in small screen size
-}
-
-.wv-toolbar-end {
-	flex-grow: 10;
-	border-bottom: 1px solid white;
-}
 }
